// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Story Promo Media Indicator should not render if item media object has no format 1`] = `
<MediaIndicator
  datetime="PT1H33M20S"
  duration="1:33:20"
  indexAlsos={false}
  service="news"
  topStory={false}
  type={null}
/>
`;

exports[`Story Promo Media Indicator should render a photo gallery item correctly 1`] = `
<MediaIndicator
  datetime={null}
  duration={null}
  indexAlsos={false}
  service="news"
  topStory={false}
  type="photogallery"
/>
`;

exports[`Story Promo Media Indicator should render a video item correctly 1`] = `
<MediaIndicator
  datetime="PT1H33M20S"
  duration="1:33:20"
  indexAlsos={false}
  service="news"
  topStory={false}
  type="video"
/>
`;

exports[`Story Promo Media Indicator should render an audio item correctly 1`] = `
<MediaIndicator
  datetime="PT59S"
  duration="0:59"
  indexAlsos={false}
  service="news"
  topStory={false}
  type="audio"
/>
`;

exports[`Story Promo Media Indicator should render correctly even without duration 1`] = `
<MediaIndicator
  datetime={null}
  duration={null}
  indexAlsos={false}
  service="news"
  topStory={false}
  type="video"
/>
`;

exports[`Story Promo Media Indicator with Index Alsos should render a video indicator correctly 1`] = `
.c1 {
  vertical-align: middle;
  margin: 0 0.25rem;
  color: #222222;
  fill: currentColor;
  width: 0.75rem;
  height: 0.75rem;
}

.c0 > svg {
  margin: 0;
}

<span
  aria-hidden="true"
  class="c0"
>
  <svg
    class="c1"
    focusable="false"
    height="12px"
    viewBox="0 0 32 32"
    width="12px"
  >
    <polygon
      points="3,32 29,16 3,0"
    />
  </svg>
</span>
`;
